add social links to connect button.

--- a/index.html
+++ b/index.html
@@ -31,38 +31,72 @@
         </div>
       </section>
       <section>
-        <button type="button" id="jokes" class="btn">Feeling board? Try some jokes</button>
-        <a href="https://chari-cruz-multipage-website.netlify.app/" class="btn btn-link" target="_blank">My portfolio</a>
+        <button type="button" id="jokes" class="btn">
+          Feeling board? Try some jokes
+        </button>
+        <a
+          href="https://chari-cruz-multipage-website.netlify.app/"
+          class="btn btn-link"
+          target="_blank"
+          >My portfolio</a
+        >
         <!-- <a href="https://feedback-form-mcc.netlify.app/" class="btn btn-link" target="_blank">Connect with me</a> -->
         <div class="dropdown">
-          <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <button
+            class="btn btn-info dropdown-toggle"
+            type="button"
+            id="dropdownMenuButton1"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
             Connect with me
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item btn btn-link"  href="#" target="_blank" rel="noopener noreferrer" >GitHub</a></li>
-            <li><a class="dropdown-item btn btn-link"  href="#" target="_blank" rel="noopener noreferrer">Linked</a></li>
-            <li><a class="dropdown-item btn btn-link" href="https://feedback-form-mcc.netlify.app/" target="_blank">Comments & Feedback</a></li>
+            <li>
+              <a
+                class="dropdown-item btn-link"
+                href="https://github.com/chari00"
+                target="_blank"
+                rel="noopener noreferrer"
+                >GitHub</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item btn-link"
+                href="https://www.linkedin.com/in/chari-154571226/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Linked</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item btn-link"
+                href="https://feedback-form-mcc.netlify.app/"
+                target="_blank"
+                >Comments & Feedback</a
+              >
+            </li>
           </ul>
         </div>
       </section>
-      
     </main>
     <script>
-      $(document).ready(function(){
-    $("#jokes").click(function(){
-        $.ajax({
+      $(document).ready(function () {
+        $("#jokes").click(function () {
+          $.ajax({
             url: "https://official-joke-api.appspot.com/random_joke",
             type: "GET",
-            success: function(data) {
-                $("#jokes").html(data.setup + "<br>" + data.punchline);
+            success: function (data) {
+              $("#jokes").html(data.setup + "<br>" + data.punchline);
             },
-            error: function(error) {
-                console.log(error);
-            }
-            
+            error: function (error) {
+              console.log(error);
+            },
+          });
         });
-    });
-});
+      });
     </script>
 
     <script
