further styling buttons.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>I&apos;m a junior full-stack web developer.</p>
         </div>
       </section>
-      <section>
+      <section class="btn-container">
         <button type="button" id="jokes" class="btn">Feeling board? 
           <span class="inline">Try some jokes</span>
         </button>
@@ -42,7 +42,7 @@
         >
         <div class="dropdown">
           <button
-            class="btn btn-info dropdown-toggle"
+            class="btn dropdown-toggle"
             type="button"
             id="dropdownMenuButton1"
             data-bs-toggle="dropdown"
