add media query for md and lg screen.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
       </section>
       <section class="btn-container">
-        <button type="button" id="jokes" class="btn">Feeling board? 
+        <button type="button" id="jokes" class="btn">Feeling bored? 
           <span class="inline">Try some jokes</span>
         </button>
         <a
@@ -74,7 +74,7 @@
                 class="dropdown-item btn-link"
                 href="https://feedback-form-mcc.netlify.app/"
                 target="_blank"
-                >Comments & Feedback</a
+                >Feedback & Comments</a
               >
             </li>
           </ul>
@@ -92,8 +92,8 @@
                 data.setup +
                   "<br>" +
                   data.punchline +
-                  "<br><a href='#' id='refresh' class='btn'>Try again.</a>" + 
-                  "<a href='index.html' id='home' class='btn'>Home.</a>"
+                  "<br><a href='#' id='another' class='btn'>Another</a>" + 
+                  "<a href='index.html' id='close' class='btn'>Close</a>"
               );
               
             },
