add key frames on hover buttons

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         </div>
       </section>
       <section class="btn-container">
-        <button type="button" id="jokes" class="btn">Feeling bored? 
+        <button type="button" id="jokes" class="btn growButton">Feeling bored? 
           <span class="inline">Try some jokes</span>
         </button>
         <a
           href="https://chari-cruz-multipage-website.netlify.app/"
-          class="btn btn-link portfolio"
+          class="btn btn-link portfolio growButton"
           target="_blank"
           >My portfolio</a
         >
-        <div class="dropdown">
+        <div class="dropdown growButton">
           <button
             class="btn dropdown-toggle"
             type="button"
